--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ paginate: 5
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default.
