--- a/.gitea/workflows/deploy-blog.yml
+++ b/.gitea/workflows/deploy-blog.yml
@@ -6,8 +6,8 @@ on:
       - main  # Adjust to your default branch
 
 jobs:
-  build-and-deploy:
-    runs-on: self-hosted  # Use your self-hosted runner
+  deploy:
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
