--- a/.gitea/workflows/deploy-blog.yml
+++ b/.gitea/workflows/deploy-blog.yml
@@ -27,7 +27,12 @@ jobs:
       run: |
         bundle exec jekyll build --destination _site
 
+    - name: Create private key
+      run: |
+          echo "${{ secrets.ACT_RUNNER_KEY }}" > /tmp/act_runner_key
+          chmod 600 /tmp/act_runner_key
+
     - name: Copy to shared directory
       run: |
-        cp -r _site/* /blog/_site/
-
+        echo "${{ secrets.HOST_USER }}@${{ secrets.HOST_URL }}:${{ secrets.BLOG_PATH }}"
+        scp -i /tmp/act_runner_key -P 2242 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -r _site/. "${{ secrets.HOST_USER }}@${{ secrets.HOST_URL }}:${{ secrets.BLOG_PATH }}"
